# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kars_runtime_maf_python"
version = "0.1.0"
description = "kars in-pod adapter for the Microsoft Agent Framework Python SDK — AAD shim, OTel auto-init, AgentMesh bridge, and Foundry tools out of the box."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Microsoft's Agent Framework Python SDK
    # (https://github.com/microsoft/agent-framework). We depend on the
    # split sub-packages rather than the `agent-framework` meta-package:
    # the meta-package's transitive graph is too large for pip's resolver
    # (ResolutionTooDeep), whereas core + openai resolve in seconds.
    #   agent-framework-core   → `agent_framework` (tool, Executor, …)
    #   agent-framework-openai → `agent_framework.openai.OpenAIChatClient`
    "agent-framework-core>=1.8,<2",
    "agent-framework-openai>=1.8,<2",
    "openai>=1.50,<2",
    "azure-identity>=1.17,<2",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "httpx>=0.27,<1",
    # AGT-Python packages — built locally from upstream by
    # `runtimes/build-agt-wheels.sh`. See runtimes/openai-agents/README.md
    # for the install pattern.
    "a2a_agentmesh>=3.3.0,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Azure/kars"
Repository = "https://github.com/Azure/kars"

[tool.hatch.build.targets.wheel]
packages = ["src/kars_runtime_maf_python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
