# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kars_runtime_openai_agents"
version = "0.1.0"
description = "kars in-pod adapter for the OpenAI Agents Python SDK — AAD shim, OTel auto-init, AgentMesh bridge, and Foundry tools out of the box."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "kars@microsoft.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai-agents>=0.1,<0.5",
    "openai>=1.50,<2",
    "azure-identity>=1.17,<2",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "httpx>=0.27,<1",
    # AGT-Python packages (built from upstream by runtimes/build-agt-wheels.sh
    # and `pip install`-ed from runtimes/wheels/ in the Dockerfile). They are
    # listed here so `pip install -e .[dev]` against a venv that already has
    # them installed (or a --find-links source) resolves cleanly. If they are
    # not available in the active Python environment install them via:
    #   pip install --find-links ../wheels a2a_agentmesh agent_sandbox
    "a2a_agentmesh>=3.3.0,<4",
    "agent_sandbox>=3.3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Azure/kars"
Repository = "https://github.com/Azure/kars"

[tool.hatch.build.targets.wheel]
packages = ["src/kars_runtime_openai_agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
