# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kars_runtime_pydantic_ai"
version = "0.1.0"
description = "Kars in-pod adapter for Pydantic-AI (Python) — AAD shim, OTel auto-init, AgentMesh bridge, and router-managed LLM credentials out of the box."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Microsoft Corporation", email = "kars@microsoft.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Pydantic-AI: type-safe agent framework. Pinned conservatively;
    # the adapter only depends on the public env-var surface
    # (OPENAI_BASE_URL, AZURE_OPENAI_ENDPOINT, ANTHROPIC_BASE_URL,
    # etc.), so minor Pydantic-AI churn is tolerable.
    "pydantic-ai>=0.0.13,<1",
    "azure-identity>=1.17,<2",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "httpx>=0.27,<1",
    # AGT-Python packages (built from upstream by runtimes/build-agt-wheels.sh
    # and `pip install`-ed from runtimes/wheels/ in the Dockerfile).
    "a2a_agentmesh>=3.3.0,<4",
    "agent_sandbox>=3.3.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/Azure/kars"
Repository = "https://github.com/Azure/kars"

[tool.hatch.build.targets.wheel]
packages = ["src/kars_runtime_pydantic_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
