[package]
name = "item-manifest"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[[bin]]
name = "item-manifest"
path = "src/main.rs"
